Fix potential concurrency issue with bucket state management

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.0.0-rc2, 5.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Fully Compatible
    • ALL
    • v5.0
    • Execution Team 2021-06-14
    • 140
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Currently we set bucket states in such a way that between checking and setting the state we release the lock, and we do not necessarily check the state again after reacquiring the lock. We shouldn't have any correctness issues, but we currently invariant against the bad cases, and we should handle these more gracefully.

            Assignee:
            Dan Larkin-York
            Reporter:
            Dan Larkin-York
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: