SERVER-57046 Fix concurrency issue with bucket state management